<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/bottom_nav_home"
        android:title="@string/home"
        android:icon="@drawable/home_grey"/>

  <!--  <item
        android:id="@+id/bottom_nav_my_data"
        android:title="@string/my_data"
        android:icon="@drawable/list_grey"/>-->

    <item
        android:id="@+id/bottom_nav_talk_doctor"
        android:title="@string/talk_doctor"
        android:icon="@drawable/talk_doctor_grey"/>

    <item
        android:id="@+id/bottom_nav_shop"
        android:title="@string/shop"
        android:icon="@drawable/shop_grey"/>

    <item
        android:id="@+id/bottom_nav_account"
        android:title="@string/account"
        android:icon="@drawable/user_grey"/>

</menu>