<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <CheckBox
        android:id="@+id/cb_dibetes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/_12sdp"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginRight="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_30sdp"
        android:text="@string/diabetes"/>

    <CheckBox
        android:id="@+id/cb_hypertension"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10sdp"
        android:textSize="@dimen/_12sdp"
        android:text="@string/hupertension_blood_pree"/>

    <TextView
        android:id="@+id/tvLocation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:background="@drawable/gray_outline_back"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginRight="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:textSize="@dimen/_13sdp"
        android:padding="@dimen/_10sdp"
        android:textColor="@color/black"
        android:text="Select Location"/>

    <Button
        android:id="@+id/btNext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:layout_marginRight="@dimen/_40sdp"
        android:layout_marginLeft="@dimen/_40sdp"
        android:textStyle="bold"
        android:layout_marginBottom="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_50sdp"
        android:textColor="@color/white"
        android:background="@drawable/button_back"
        android:text="@string/next"/>

</LinearLayout>