<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/back_color"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_50sdp"
                android:background="@drawable/header_back">

                <ImageView
                    android:id="@+id/ivBack"
                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:src="@drawable/ic_back_white"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/_15sdp"
                    android:textStyle="bold"
                    android:layout_centerInParent="true"
                    android:textColor="@color/white"
                    android:text="@string/inp_blood_pres"/>
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="@dimen/_10sdp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/_12sdp"
                        android:layout_centerInParent="true"
                        android:layout_marginTop="@dimen/_20sdp"
                        android:textColor="@color/black"
                        android:text="@string/your_blood_pree"/>
                    <EditText
                        android:id="@+id/etSystonic"
                        android:layout_width="match_parent"
                        android:singleLine="true"
                        android:inputType="number"
                        android:maxLength="3"
                        android:layout_margin="@dimen/_10sdp"
                        android:textColor="@color/black"
                        android:layout_height="wrap_content"
                        android:hint="@string/systonic"/>
                    <EditText
                        android:id="@+id/etDiastolic"
                        android:layout_width="match_parent"
                        android:singleLine="true"
                        android:textColor="@color/black"
                        android:inputType="number"
                        android:maxLength="3"
                        android:layout_margin="@dimen/_10sdp"
                        android:layout_height="wrap_content"
                        android:hint="@string/diastolic"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:orientation="horizontal">

                    </LinearLayout>

                </LinearLayout>


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/_15sdp"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:layout_centerInParent="true"
                    android:textColor="@color/black"
                    android:text="@string/how_do_you_feel"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvHowFeel"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_150sdp">
                </androidx.recyclerview.widget.RecyclerView>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="3"
                    android:visibility="gone"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/_13sdp"
                        android:paddingLeft="@dimen/_15sdp"
                        android:paddingRight="@dimen/_15sdp"
                        android:gravity="center"
                        android:paddingTop="@dimen/_5sdp"
                        android:paddingBottom="@dimen/_5sdp"
                        android:layout_centerInParent="true"
                        android:background="@drawable/gray_outline_back"
                        android:textColor="@color/black"
                        android:text="@string/happy"/>

                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/_13sdp"
                        android:paddingLeft="@dimen/_15sdp"
                        android:paddingRight="@dimen/_15sdp"
                        android:gravity="center"
                        android:layout_marginLeft="@dimen/_10sdp"
                        android:paddingTop="@dimen/_5sdp"
                        android:paddingBottom="@dimen/_5sdp"
                        android:layout_centerInParent="true"
                        android:background="@drawable/gray_outline_back"
                        android:textColor="@color/black"
                        android:text="@string/angry"/>

                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/_13sdp"
                        android:paddingLeft="@dimen/_15sdp"
                        android:paddingRight="@dimen/_15sdp"
                        android:gravity="center"
                        android:layout_marginLeft="@dimen/_10sdp"
                        android:paddingTop="@dimen/_5sdp"
                        android:paddingBottom="@dimen/_5sdp"
                        android:layout_centerInParent="true"
                        android:background="@drawable/gray_outline_back"
                        android:textColor="@color/black"
                        android:text="@string/sad"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="3"
                    android:visibility="gone"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/_13sdp"
                        android:paddingLeft="@dimen/_15sdp"
                        android:paddingRight="@dimen/_15sdp"
                        android:gravity="center"
                        android:paddingTop="@dimen/_5sdp"
                        android:paddingBottom="@dimen/_5sdp"
                        android:layout_centerInParent="true"
                        android:background="@drawable/gray_outline_back"
                        android:textColor="@color/black"
                        android:text="@string/tired"/>

                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/_13sdp"
                        android:paddingLeft="@dimen/_15sdp"
                        android:paddingRight="@dimen/_15sdp"
                        android:gravity="center"
                        android:layout_marginLeft="@dimen/_10sdp"
                        android:paddingTop="@dimen/_5sdp"
                        android:paddingBottom="@dimen/_5sdp"
                        android:layout_centerInParent="true"
                        android:background="@drawable/gray_outline_back"
                        android:textColor="@color/black"
                        android:text="@string/exicted"/>

                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/_13sdp"
                        android:paddingLeft="@dimen/_15sdp"
                        android:paddingRight="@dimen/_15sdp"
                        android:gravity="center"
                        android:layout_marginLeft="@dimen/_10sdp"
                        android:paddingTop="@dimen/_5sdp"
                        android:paddingBottom="@dimen/_5sdp"
                        android:layout_centerInParent="true"
                        android:background="@drawable/gray_outline_back"
                        android:textColor="@color/black"
                        android:text="@string/stressed"/>

                </LinearLayout>

                <Button
                    android:id="@+id/btNext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAllCaps="false"
                    android:layout_marginBottom="@dimen/_10sdp"
                    android:textStyle="bold"
                    android:layout_marginTop="@dimen/_50sdp"
                    android:textColor="@color/white"
                    android:background="@drawable/button_back"
                    android:text="@string/submit"/>

            </LinearLayout>


        </LinearLayout>

    </ScrollView>

</layout>