<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/back_color"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:background="@drawable/header_back">

            <ImageView
                android:id="@+id/ivBack"
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:layout_centerVertical="true"
                android:visibility="invisible"
                android:layout_marginLeft="@dimen/_10sdp"
                android:src="@drawable/ic_back_white"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_15sdp"
                android:textStyle="bold"
                android:layout_centerInParent="true"
                android:textColor="@color/white"
                android:text="@string/inp_blood_sugar"/>

        </RelativeLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="@dimen/_10sdp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">


                    <EditText
                        android:id="@+id/sugar_reading"
                        android:layout_width="match_parent"
                        android:textColor="@color/black"
                        android:inputType="textVisiblePassword"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:singleLine="true"
                        android:hint="@string/blood_sugar_reading"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/_12sdp"
                        android:layout_centerInParent="true"
                        android:layout_marginTop="@dimen/_20sdp"
                        android:textColor="@color/black"
                        android:text="@string/what_meal_it"/>

                    <Spinner
                        android:id="@+id/sp_what_meal_was_it"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_8sdp"
                        android:entries="@array/what_meal_entries"/>
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_1sdp"
                        android:layout_marginTop="@dimen/_2sdp"
                        android:background="@color/black_medium"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/_12sdp"
                        android:layout_centerInParent="true"
                        android:layout_marginTop="@dimen/_20sdp"
                        android:textColor="@color/black"
                        android:text="@string/what_reading_take"/>

                    <Spinner
                        android:id="@+id/sp_what_take_reading"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_8sdp"
                        android:entries="@array/what_reading_entries"/>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_1sdp"
                        android:layout_marginTop="@dimen/_2sdp"
                        android:background="@color/black_medium"/>

                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/_15sdp"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:layout_centerInParent="true"
                    android:textColor="@color/black"
                    android:text="@string/how_do_you_feel"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvHowFeelSugar"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_150sdp">
                </androidx.recyclerview.widget.RecyclerView>

                <Button
                    android:id="@+id/btNext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAllCaps="false"
                    android:textStyle="bold"
                    android:layout_marginTop="@dimen/_40sdp"
                    android:textColor="@color/white"
                    android:background="@drawable/button_back"
                    android:text="@string/next"/>

            </LinearLayout>

        </ScrollView>



    </LinearLayout>

</layout>