<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/back_color"
            android:layout_marginBottom="@dimen/_10sdp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_20sdp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:layout_marginLeft="@dimen/_20sdp"
                android:layout_marginRight="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_40sdp"
                android:text="@string/account_info"/>

            <ImageView
                android:id="@+id/profileImg"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_150sdp"
                android:scaleType="fitXY"
                android:layout_marginLeft="@dimen/_20sdp"
                android:layout_marginRight="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:src="@drawable/profile_picture"/>

            <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/full_name"
                android:textSize="@dimen/_12sdp"
                android:singleLine="true"
                android:drawablePadding="@dimen/_10sdp"
                android:drawableLeft="@drawable/edit_user_red"
                android:inputType="textVisiblePassword"
                android:textColorHint="@color/black"
                android:layout_marginTop="@dimen/_30sdp"
                android:layout_marginLeft="@dimen/_20sdp"
                android:layout_marginRight="@dimen/_20sdp"
                android:textColor="@color/black"
                android:padding="@dimen/_13sdp"
                android:background="@drawable/gray_outline_back"/>

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:textSize="@dimen/_12sdp"
                android:inputType="textVisiblePassword"
                android:singleLine="true"
                android:drawablePadding="@dimen/_10sdp"
                android:drawableLeft="@drawable/edit_email"
                android:textColorHint="@color/black"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginLeft="@dimen/_20sdp"
                android:layout_marginRight="@dimen/_20sdp"
                android:textColor="@color/black"
                android:padding="@dimen/_13sdp"
                android:background="@drawable/gray_outline_back"/>

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Password"
                android:textSize="@dimen/_12sdp"
                android:inputType="textPassword"
                android:singleLine="true"
                android:drawablePadding="@dimen/_10sdp"
                android:drawableLeft="@drawable/edit_user_red"
                android:textColorHint="@color/black"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginLeft="@dimen/_20sdp"
                android:layout_marginRight="@dimen/_20sdp"
                android:textColor="@color/black"
                android:padding="@dimen/_13sdp"
                android:background="@drawable/gray_outline_back"/>

            <EditText
                android:id="@+id/age"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/age"
                android:textSize="@dimen/_12sdp"
                android:textColorHint="@color/black"
                android:singleLine="true"
                android:drawablePadding="@dimen/_10sdp"
                android:drawableLeft="@drawable/edit_age"
                android:inputType="number"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginLeft="@dimen/_20sdp"
                android:layout_marginRight="@dimen/_20sdp"
                android:textColor="@color/black"
                android:padding="@dimen/_13sdp"
                android:background="@drawable/gray_outline_back"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/_10sdp"
                android:gravity="center"
                android:background="@drawable/gray_outline_back"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginLeft="@dimen/_20sdp"
                android:layout_marginRight="@dimen/_20sdp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="@dimen/_15sdp"
                    android:layout_height="@dimen/_15sdp"
                    android:src="@drawable/edit_user_red"/>

                <Spinner
                    android:id="@+id/spGender"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_5sdp"
                    android:entries="@array/gender_type"/>

            </LinearLayout>

            <EditText
                android:id="@+id/height"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/height"
                android:textSize="@dimen/_12sdp"
                android:inputType="numberDecimal"
                android:singleLine="true"
                android:drawablePadding="@dimen/_10sdp"
                android:drawableLeft="@drawable/edit_height"
                android:textColorHint="@color/black"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginLeft="@dimen/_20sdp"
                android:layout_marginRight="@dimen/_20sdp"
                android:textColor="@color/black"
                android:padding="@dimen/_13sdp"
                android:background="@drawable/gray_outline_back"/>

            <EditText
                android:id="@+id/weight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/weight"
                android:textSize="@dimen/_12sdp"
                android:textColorHint="@color/black"
                android:drawablePadding="@dimen/_10sdp"
                android:drawableLeft="@drawable/edit_weight"
                android:singleLine="true"
                android:inputType="number"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginLeft="@dimen/_20sdp"
                android:layout_marginRight="@dimen/_20sdp"
                android:textColor="@color/black"
                android:padding="@dimen/_13sdp"
                android:background="@drawable/gray_outline_back"/>

            <Button
                android:id="@+id/btNext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAllCaps="false"
                android:layout_marginLeft="@dimen/_40sdp"
                android:layout_marginRight="@dimen/_40sdp"
                android:textStyle="bold"
                android:layout_marginTop="@dimen/_30sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:textColor="@color/white"
                android:background="@drawable/button_back"
                android:text="Next"/>

        </LinearLayout>

    </ScrollView>

</layout>